[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,7 +1,10 @@
 <html>
 <head>
-    <title>index_one</title>
+    <title>article-one|anand</title>
     </head>
-    <body bgcolor="red">
+    <body>
+    <h4>My First Article</h4>
+    <hr>
+    <a href="/">Home</a>
            </body>
 </html>
