--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             My first webapp.....
             <h4>I am anand</h4>
         </div>
-        <a href="/article-one.html">Article-one</a>
+        <a href="/ui/article-one.html">Article-one</a>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
