--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,5 +6,18 @@
     <h4>My First Article</h4>
     <hr>
     <a href="/">Home</a>
+    <hr>
+    <div>
+        <p>This is my first article</p>
+        <p>This is my first article</p>
+        <p>This is my first article</p>
+        <p>This is my first article</p>
+        <p>This is my first article</p>
+        <p>This is my first article</p>
+        <p>This is my first article</p>
+        <p>This is my first article</p>
+        <p>This is my first article</p>
+        <p>This is my first article</p>
+        </div>
            </body>
 </html>
