--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,13 +1,21 @@
 <html>
 <head>
     <title>article-one|anand</title>
+    <style>
+    .first
+    {
+    max-width:800px;
+    margin:0 auto;
+    font-family:sans-serif;
+    }
+    </style>
     </head>
     <body>
     <h4>My First Article</h4>
     <hr>
     <a href="/">Home</a>
     <hr>
-    <div>
+    <div class="first">
         <p>This is my first article</p>
         <p>This is my first article</p>
         <p>This is my first article</p>
