[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,15 +1,7 @@
 <html>
 <head>
     <title>article-one|anand</title>
-    <style>
-    .first
-    {
-    max-width:800px;
-    margin:0 auto;
-    font-family:sans-serif;
-    color:gray;
-    }
-    </style>
+    <link rel="stylesheet" href="/ui/article-one.html">
     </head>
     <body>
     <h4>My First Article</h4>
