[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>article-one|anand</title>
-    <link rel="stylesheet" href="/ui/article-one.html">
+    <link rel="stylesheet" href="/ui/style.css">
     </head>
     <body>
     <h4>My First Article</h4>
